# otus_cpp_basic_hw9

./: README.md
otus_cpp_basic_hw2/: .gitignore  README.md
otus_cpp_basic_hw2/cmake/: 01.hello_world.sln  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello_world.vcxproj  hello_world.vcxproj.filters
otus_cpp_basic_hw2/cmake/hello_world.dir/Debug/: hello_world.exe.recipe  hello_world.ilk
otus_cpp_basic_hw2/cmake/hello_world.dir/Debug/hello_world.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  hello_world.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
otus_cpp_basic_hw2/cmake/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
otus_cpp_basic_hw2/cmake/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
otus_cpp_basic_hw2/cmake/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
otus_cpp_basic_hw2/cmake/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
otus_cpp_basic_hw2/source/: CMakeLists.txt
otus_cpp_basic_hw3/: .gitignore  README.md
otus_cpp_basic_hw3/Source/: CMakeLists.txt  main.cpp  main.h
otus_cpp_basic_hw4/: README.md
otus_cpp_basic_hw4/source/: Ball.cpp  Ball.hpp  CMakeLists.txt  Color.cpp  Color.h  Dust.cpp  Dust.h  Physics.cpp  Physics.h  Point.h  World.cpp  World.h  main.cpp
otus_cpp_basic_hw4/source/black_box/: Application.cpp
otus_cpp_basic_hw5/: README.md
otus_cpp_basic_hw5/source/: CMakeLists.txt  max.cpp  max.h  mean.cpp  mean.h  min.cpp  min.h  pct90.cpp  pct90.h  pct95.cpp  pct95.h  statistics.cpp  statistics.h  std_deviation.cpp  std_deviation.h
otus_cpp_basic_hw6/: README.md
otus_cpp_basic_hw6/source/: CMakeLists.txt  main.cpp  main.h  my_exception.h  u_forward_list.cpp  u_forward_list.h  u_list.h  u_list.ipp  u_vector.h  u_vector.ipp
otus_cpp_basic_hw7/: .gitignore  README.md
otus_cpp_basic_hw7/source/: u_list.h  u_list.ipp  u_vector.h  u_vector.ipp
otus_cpp_basic_hw7/source/gtests/: CMakeLists.txt  extra_2_destructor.cpp  list_tests.cpp  vector_tests.cpp
otus_cpp_basic_hw8/: README.md
otus_cpp_basic_hw8/source/: CMakeLists.txt  main.cpp  main.h  most_common_words.cpp  most_common_words.h  original_source_from_hw.cpp  original_source_from_hw.h
source/: CMakeLists.txt  body_type.h  contact_listener.cpp  contact_listener.h  entities.cpp  entities.h  food.cpp  food.h  game_core.cpp  game_core.h  main.cpp  main_character.cpp  main_character.h  map1.cpp  map1.h  maps.cpp  maps.h  menu.cpp  menu.h  platforms.cpp  platforms.h  settings.cpp  settings.h  ui.cpp  ui.h
